<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211D44"

    android:orientation="vertical"
    tools:context=".Start_activity">


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_test">
    </com.google.android.gms.ads.AdView>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="370dp"
        android:layout_height="350dp"
        android:layout_gravity="right"
        android:layout_margin="15dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imgp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/todo"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/producksansregular"
        android:text="@string/todo"

        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/podo"


        android:layout_width="240dp"

        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"

        android:layout_marginTop="80dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn"

        android:fontFamily="@font/producksansregular"


        android:shadowDx="0"


        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/Pomodorobtn"
        android:textAllCaps="false"

        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />




</LinearLayout>

