<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backround"
    android:orientation="vertical"
    tools:context=".Activity.InsertNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/upTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/edt_txt_bac"
            android:fontFamily="@font/producksansregular"
            android:hint="@string/title"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/producksansregular"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/important"/>


            <ImageView
                android:id="@+id/greenPriority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"

                android:background="@drawable/green_shape"/>

            <ImageView
                android:id="@+id/yellowPriority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"

                android:background="@drawable/yellow_shape"/>



            <ImageView
                android:id="@+id/redPriority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/red_shape"/>




        </LinearLayout>

        <EditText
            android:id="@+id/upSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/edt_txt_bac"
            android:fontFamily="@font/producksansregular"
            android:hint="@string/subtitle"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#0E0E0E"
            />




        <EditText
            android:id="@+id/upNotes"
            android:layout_width="match_parent"
            android:background="@drawable/edt_txt_bac"
            android:layout_height="300dp"
            android:hint="@string/note"
            android:fontFamily="@font/producksansregular"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:padding="15dp"
            android:layout_marginLeft="16dp"
            android:gravity="start"
            android:textColorHint="@color/black"
            android:textColor="@color/black"

            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            />



    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateNotesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="26dp"
        android:src="@drawable/ic_baseline_done_24"
        app:backgroundTint="@color/red" />

</RelativeLayout>